Fixed desktop design when there's no plan.

--- a/src/components/mgt-tasks/mgt-tasks.scss
+++ b/src/components/mgt-tasks/mgt-tasks.scss
@@ -269,7 +269,7 @@ mgt-tasks,
           margin: 0;
 
           &.NoPlan {
-            grid-template-columns: 0 1fr 1fr 1fr;
+            grid-template-columns: 2fr 0 1fr 1fr 1fr;
           }
 
           .TaskDetail {
