--- a/src/components/mgt-people-picker/mgt-people-picker.scss
+++ b/src/components/mgt-people-picker/mgt-people-picker.scss
@@ -47,7 +47,7 @@ mgt-people-picker .people-list {
   width: 100%;
   text-align: left;
   list-style-type: none;
-  font-family: Segoe UI;
+  font-family: var(--default-font-family, 'Segoe UI');
   font-style: normal;
   font-weight: normal;
 
@@ -70,7 +70,6 @@ mgt-people-picker .people-selected-input {
   border: none;
   line-height: normal;
   outline: none;
-  font-family: Segoe UI;
   font-style: normal;
   font-weight: normal;
   font-size: 14px;
@@ -85,7 +84,6 @@ mgt-people-picker .people-selected-list {
   margin: 0 0 0 0;
   list-style-type: none;
   padding-left: 10px;
-  font-family: Segoe UI;
   font-style: normal;
   font-weight: normal;
 }
@@ -123,7 +121,6 @@ mgt-people-picker .list-person {
   flex-wrap: wrap;
   align-items: center;
   padding: 12px;
-  font-family: Segoe UI;
   font-style: normal;
   font-weight: 600;
   font-size: 14px;
@@ -193,7 +190,6 @@ mgt-people-picker .person-display-name {
   white-space: nowrap;
   text-overflow: ellipsis;
   margin-left: 8px;
-  font-family: Segoe UI;
   font-style: normal;
   font-weight: 600;
   font-size: 14px;
