--- a/src/components/mgt-tasks/mgt-tasks.scss
+++ b/src/components/mgt-tasks/mgt-tasks.scss
@@ -100,7 +100,9 @@ mgt-tasks .Header .NewTaskButton,
 :host .Header .NewTaskButton {
   flex: 0 0 auto;
   display: grid;
+  display: -ms-grid;
   grid-template-columns: auto auto;
+  -ms-grid-columns: auto auto;
   column-gap: 8px;
   justify-content: center;
   align-items: center;
@@ -161,8 +163,11 @@ mgt-tasks,
       .TaskDetailsContainer {
         flex: 1;
         display: grid;
+        display: -ms-grid;
         grid-template-columns: auto 1fr;
+        -ms-grid-columns: auto 1fr;
         grid-template-rows: auto auto auto auto;
+        -ms-grid-rows: auto auto auto auto;
         justify-content: space-between;
         align-items: flex-start;
 
@@ -187,7 +192,10 @@ mgt-tasks,
           font-size: 14px;
           font-weight: 600;
           grid-row: 1;
+          -ms-grid-row: 1;
           grid-column: 1 / 3;
+          -ms-grid-column: 1;
+          -ms-grid-column-span: 2;
           margin: 22px 0 4px;
         }
 
@@ -195,19 +203,26 @@ mgt-tasks,
           min-height: 24px;
 
           grid-row: 2;
+          -ms-grid-row: 2;
           grid-column: 1;
+          -ms-grid-column: 1;
         }
 
         .TaskBucket {
           min-height: 24px;
 
           grid-row: 2;
+          -ms-grid-row: 2;
           grid-column: 2;
+          -ms-grid-column: 2;
         }
 
         .TaskAssignee {
           grid-row: 3;
+          -ms-grid-row: 3;
           grid-column: 1 / 3;
+          -ms-grid-column: 1;
+          -ms-grid-column-span: 2;
 
           mgt-people {
             --list-margin: 0;
@@ -219,15 +234,21 @@ mgt-tasks,
           align-items: flex-start;
 
           grid-row: 4;
+          -ms-grid-row: 4;
           grid-column: 1 / 3;
+          -ms-grid-column: 1;
+          -ms-grid-column-span: 2;
         }
 
         &.tablet {
           grid-template-columns: 1fr 0.5fr 1fr 0.5fr;
+          -ms-grid-columns: 1fr 0.5fr 1fr 0.5fr;
           grid-template-rows: auto auto;
+          -ms-grid-rows: auto auto;
 
           &.NoPlan {
             grid-template-columns: 0 1fr 1fr 1fr;
+            -ms-grid-columns: 0 1fr 1fr 1fr;
           }
 
           .TaskDetail {
@@ -236,22 +257,31 @@ mgt-tasks,
 
           .TaskTitle {
             grid-row: 1;
+            -ms-grid-row: 1;
             grid-column: 1 / 5;
+            -ms-grid-column: 1;
+            -ms-grid-column-span: 4;
           }
 
           .TaskGroup {
             grid-row: 2;
+            -ms-grid-row: 2;
             grid-column: 1;
+            -ms-grid-column: 1;
           }
 
           .TaskBucket {
             grid-row: 2;
+            -ms-grid-row: 2;
             grid-column: 2;
+            -ms-grid-column: 2;
           }
 
           .TaskAssignee {
             grid-row: 2;
+            -ms-grid-row: 2;
             grid-column: 3;
+            -ms-grid-column: 3;
           }
 
           .TaskDue {
@@ -259,17 +289,22 @@ mgt-tasks,
             align-items: center;
 
             grid-row: 2;
+            -ms-grid-row: 2;
             grid-column: 4;
+            -ms-grid-column: 4;
           }
         }
 
         &.desktop {
           grid-template-columns: 2fr 1fr 0.5fr 1fr 0.5fr;
+          -ms-grid-columns: 2fr 1fr 0.5fr 1fr 0.5fr;
           grid-template-rows: auto;
+          -ms-grid-rows: auto;
           margin: 0;
 
           &.NoPlan {
             grid-template-columns: 2fr 0 1fr 1fr 1fr;
+            -ms-grid-columns: 2fr 0 1fr 1fr 1fr;
           }
 
           .TaskDetail {
@@ -280,22 +315,30 @@ mgt-tasks,
             padding: 0;
 
             grid-row: 1;
+            -ms-grid-row: 1;
             grid-column: 1;
+            -ms-grid-column: 1;
           }
 
           .TaskGroup {
             grid-row: 1;
+            -ms-grid-row: 1;
             grid-column: 2;
+            -ms-grid-column: 2;
           }
 
           .TaskBucket {
             grid-row: 1;
+            -ms-grid-row: 1;
             grid-column: 3;
+            -ms-grid-column: 3;
           }
 
           .TaskAssignee {
             grid-row: 1;
+            -ms-grid-row: 1;
             grid-column: 4;
+            -ms-grid-column: 4;
           }
 
           .TaskDue {
@@ -303,7 +346,9 @@ mgt-tasks,
             align-items: center;
 
             grid-row: 1;
+            -ms-grid-row: 1;
             grid-column: 5;
+            -ms-grid-column: 5;
           }
         }
 
@@ -575,6 +620,9 @@ mgt-tasks,
       .TaskCheckContainer {
         cursor: default;
       }
+      .TaskDetails {
+        display: flex;
+      }
       .TaskCheck {
         background: #f2f2f2;
         border-color: #f2f2f2;
@@ -592,7 +640,9 @@ mgt-tasks,
       }
       .TaskTitle {
         background: #f2f2f2;
+        max-width: 400px;
         height: 20px;
+        margin-right: 20px !important;
       }
       .TaskDetail {
         margin-right: 12px;
