--- a/src/components/mgt-person-card/mgt-person-card.scss
+++ b/src/components/mgt-person-card/mgt-person-card.scss
@@ -31,20 +31,17 @@ $color: var(--color, #{$ms-color-neutralDark});
 
       .display-name {
         font-size: 27.3103px;
-        // line-height: 36px;
         color: #333333;
       }
 
       .job-title {
         font-size: 18.2069px;
-        // line-height: 31px;
         color: #767676;
         font-weight: 600;
       }
 
       .department {
         font-size: 15.1724px;
-        // line-height: 31px;
         color: #767676;
       }
 
@@ -68,14 +65,13 @@ $color: var(--color, #{$ms-color-neutralDark});
 
   .additional-details-container {
     .additional-details-button {
+      display: flex;
+      justify-content: center;
+      align-items: center;
       height: 28px;
       background: rgba(196, 196, 196, 0.1);
-      text-align: center;
-      position: relative;
       .additional-details-svg {
-        width: 50%;
-        bottom: 0;
-        top: 100%;
+        margin-bottom: 3px;
       }
     }
     .additional-details-button:hover {
