--- a/src/components/mgt-tasks/mgt-tasks.scss
+++ b/src/components/mgt-tasks/mgt-tasks.scss
@@ -13,16 +13,13 @@ mgt-tasks,
   font-family: var(--default-font-family, 'Segoe UI');
   display: flex;
   flex-direction: column;
+  background-color: var(--tasks-background-color, #f8f8f8);
+  padding: var(--tasks-padding, 12px);
 }
 
 mgt-tasks .TaskIcon,
 :host .TaskIcon {
   font-family: 'FabricMDL2Icons';
-  text-align: center;
-  justify-self: center;
-  align-content: center;
-  align-self: center;
-  vertical-align: middle;
   user-select: none;
   -moz-user-select: none;
   -ms-user-select: none;
@@ -30,8 +27,8 @@ mgt-tasks .TaskIcon,
 
 mgt-tasks .Header,
 :host .Header {
-  padding: var(--tasks-header-padding, 0px 10px 0 10px);
-  margin: var(--tasks-header-margin, 0 0 10px 0);
+  padding: var(--tasks-header-padding, 0);
+  margin: var(--tasks-header-margin, 0 0 12px 0);
 }
 
 mgt-tasks .TaskIcon.Divider,
@@ -41,12 +38,11 @@ mgt-tasks .TaskIcon.Divider,
   font-size: 16px;
 }
 
-mgt-tasks .Header .PlannerTitle,
-:host .Header .PlannerTitle {
-  padding: var(--tasks-title-padding, 0px 0px 0px 0px);
+mgt-tasks .Header,
+:host .Header {
+  padding: var(--tasks-title-padding, 0);
   display: flex;
   align-items: center;
-  align-content: center;
 }
 
 mgt-tasks select,
@@ -63,10 +59,10 @@ mgt-tasks select::-ms-expand,
   display: none;
 }
 
-mgt-tasks .PlannerTitle select,
-:host .PlannerTitle select,
-mgt-tasks .Header .PlannerTitle .PlanTitle,
-:host .Header .PlannerTitle .PlanTitle {
+mgt-tasks select,
+:host select,
+mgt-tasks .Header .PlanTitle,
+:host .Header .PlanTitle {
   font-family: var(--default-font-family, 'Segoe UI');
   font-size: var(--tasks-plan-title-font-size, 1.1em);
   padding: var(--tasks-plan-title-padding, 5px);
@@ -95,26 +91,24 @@ mgt-tasks .Header .NewTaskDue input,
 mgt-tasks .Header .TitleCont,
 :host .Header .TitleCont {
   flex: 1 1 auto;
+  display: flex;
+  align-items: center;
   height: var(--tasks-new-button-height, 34px);
 }
 
 mgt-tasks .Header .NewTaskButton,
 :host .Header .NewTaskButton {
   flex: 0 0 auto;
-  display: inline-block;
-  width: var(--task-new-button-width, 90px);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  width: var(--task-new-button-width, auto);
   height: var(--tasks-new-button-height, 32px);
-  max-width: 90px;
-  min-width: 90px;
-  line-height: 200%;
+  border-radius: 2px;
+  padding: 0 20px;
 
-  text-align: center;
-  align-content: center;
-  align-self: center;
-  vertical-align: middle;
-  justify-self: flex-end;
-
-  background: var(--tasks-new-button-background, #0078d4);
+  background: var(--tasks-new-button-background, $ms-color-communicationPrimary);
   border: var(--tasks-new-button-border, solid 1px rgba(0, 0, 0, 0));
   color: var(--tasks-new-button-color, #ffffff);
 
@@ -123,101 +117,285 @@ mgt-tasks .Header .NewTaskButton,
   -ms-user-select: none;
 
   cursor: pointer;
+
+  span {
+    font-size: 14px;
+    font-weight: 600;
+    letter-spacing: 0.1px;
+    line-height: 14px;
+  }
+
+  .TaskIcon {
+    margin-right: 8px;
+  }
 }
 
 mgt-tasks .Header .NewTaskButton:hover,
 :host .Header .NewTaskButton:hover {
-  background: var(--tasks-new-button-hover-background, #0091ff);
+  background: var(--tasks-new-button-hover-background, $ms-color-communicationShade10);
 }
 
 mgt-tasks .Header .NewTaskButton:active,
 :host .Header .NewTaskButton:active {
-  background: var(--tasks-new-button-active-background, #00508d);
+  background: var(--tasks-new-button-active-background, $ms-color-communicationShade20);
 }
 
 mgt-tasks,
 :host {
   .Task {
-    margin: var(--task-margin, 0 10px 10px 10px);
-    padding: var(--task-padding, 0 0 0 0);
-    box-shadow: var(--task-box-shadow, 0px 2px 8px rgba(0, 0, 0, 0.092));
-    background: var(--task-background, #ffffff);
     position: relative;
+    margin: var(--task-margin, 0 0 18px 0);
+    padding: var(--task-padding, 0 0 0 0);
+    background-color: var(--task-background, white);
 
     .TaskContent {
       display: flex;
-      flex-direction: row;
+
+      .Divider {
+        position: absolute;
+        height: 2px;
+        left: 0;
+        right: 0;
+        bottom: 0;
+        background-color: $ms-color-gray30;
+      }
 
       .TaskDetailsContainer {
-        color: var(--task-detail-color, #767676);
-        margin: 20px 0 18px 0;
-        display: flex;
-        flex-direction: column;
-        flex: 1 1 auto;
+        flex: 1;
+        display: grid;
+        display: -ms-grid;
+        grid-template-columns: auto 1fr;
+        -ms-grid-columns: auto 1fr;
+        grid-template-rows: auto auto auto auto;
+        -ms-grid-rows: auto auto auto auto;
+        justify-content: space-between;
+        align-items: flex-start;
 
-        .TaskTitle {
-          flex: 1 0 auto;
-          color: #333333;
-          max-width: 370px;
+        color: var(--task-detail-color, $ms-color-gray130);
+        font-size: 12px;
+        font-weight: 600;
+        white-space: nowrap;
+        margin-bottom: 12px;
+
+        .TaskDetail {
           width: 100%;
-          font-size: 20px;
-          font-weight: 300;
+          height: 100%;
+          margin: 4px 24px 6px 0;
+
+          display: flex;
+          justify-content: flex-start;
+          align-items: center;
         }
 
-        .TaskDetails {
-          display: flex;
-          margin: 10px 0 0 0;
-          font-size: 12px;
-          font-weight: 400;
-          align-items: center;
-          flex-wrap: wrap;
+        .TaskTitle {
+          color: var(--task-title-color, $ms-color-gray160);
+          font-size: 14px;
+          font-weight: 600;
+          grid-row: 1;
+          -ms-grid-row: 1;
+          grid-column: 1 / 3;
+          -ms-grid-column: 1;
+          -ms-grid-column-span: 2;
+          margin: 22px 0 4px;
+        }
 
-          svg {
-            vertical-align: middle;
-            margin-right: 4px;
-          }
-          span,
-          select {
-            vertical-align: middle;
-          }
-          .TaskDetail {
-            margin: 0 20px 0 0;
-          }
+        .TaskGroup {
+          min-height: 24px;
 
-          .TaskIcon {
-            color: #333333;
-            margin: var(--task-detail-icon-margin 0 8px 0 0);
-          }
+          grid-row: 2;
+          -ms-grid-row: 2;
+          grid-column: 1;
+          -ms-grid-column: 1;
+        }
+
+        .TaskBucket {
+          min-height: 24px;
+
+          grid-row: 2;
+          -ms-grid-row: 2;
+          grid-column: 2;
+          -ms-grid-column: 2;
+        }
+
+        .TaskAssignee {
+          grid-row: 3;
+          -ms-grid-row: 3;
+          grid-column: 1 / 3;
+          -ms-grid-column: 1;
+          -ms-grid-column-span: 2;
+
           mgt-people {
-            color: var(--task-detail-color, black);
-            font-size: 16px;
+            --list-margin: 0;
+          }
+        }
+
+        .TaskDue {
+          justify-content: flex-end;
+          align-items: flex-start;
+
+          grid-row: 4;
+          -ms-grid-row: 4;
+          grid-column: 1 / 3;
+          -ms-grid-column: 1;
+          -ms-grid-column-span: 2;
+        }
+
+        &.tablet {
+          grid-template-columns: 1fr 0.5fr 1fr 0.5fr;
+          -ms-grid-columns: 1fr 0.5fr 1fr 0.5fr;
+          grid-template-rows: auto auto;
+          -ms-grid-rows: auto auto;
+
+          &.NoPlan {
+            grid-template-columns: 0 1fr 1fr 1fr;
+            -ms-grid-columns: 0 1fr 1fr 1fr;
           }
 
-          mgt-person {
-            display: inline-block;
-          }
-          .Picker {
-            background-color: white;
-            box-shadow: 0 3px 7px rgba(0, 0, 0, 0.3);
-            -webkit-background-clip: padding-box;
-            -moz-background-clip: padding-box;
-            background-clip: padding-box;
-            width: 350px;
-            color: var(--task-detail-color, black);
-            margin: 8px;
-            mgt-people-picker {
-              --separator-margin: 0px 10px 0px 10px;
-            }
+          .TaskDetail {
+            margin: 4px 24px 6px 0;
           }
 
-          input,
-          select {
-            color: var(--task-detail-color, #767676);
-            font-size: 0.9em;
+          .TaskTitle {
+            grid-row: 1;
+            -ms-grid-row: 1;
+            grid-column: 1 / 5;
+            -ms-grid-column: 1;
+            -ms-grid-column-span: 4;
           }
+
+          .TaskGroup {
+            grid-row: 2;
+            -ms-grid-row: 2;
+            grid-column: 1;
+            -ms-grid-column: 1;
+          }
+
+          .TaskBucket {
+            grid-row: 2;
+            -ms-grid-row: 2;
+            grid-column: 2;
+            -ms-grid-column: 2;
+          }
+
+          .TaskAssignee {
+            grid-row: 2;
+            -ms-grid-row: 2;
+            grid-column: 3;
+            -ms-grid-column: 3;
+          }
+
+          .TaskDue {
+            justify-content: flex-start;
+            align-items: center;
+
+            grid-row: 2;
+            -ms-grid-row: 2;
+            grid-column: 4;
+            -ms-grid-column: 4;
+          }
+        }
+
+        &.desktop {
+          grid-template-columns: 2fr 1fr 0.5fr 1fr 0.5fr;
+          -ms-grid-columns: 2fr 1fr 0.5fr 1fr 0.5fr;
+          grid-template-rows: auto;
+          -ms-grid-rows: auto;
+          margin: 0;
+
+          &.NoPlan {
+            grid-template-columns: 2fr 0 1fr 1fr 1fr;
+            -ms-grid-columns: 2fr 0 1fr 1fr 1fr;
+          }
+
+          .TaskDetail {
+            margin: 0 24px 0 0;
+          }
+
+          .TaskTitle {
+            padding: 0;
+
+            grid-row: 1;
+            -ms-grid-row: 1;
+            grid-column: 1;
+            -ms-grid-column: 1;
+          }
+
+          .TaskGroup {
+            min-height: 61px;
+            grid-row: 1;
+            -ms-grid-row: 1;
+            grid-column: 2;
+            -ms-grid-column: 2;
+          }
+
+          .TaskBucket {
+            grid-row: 1;
+            -ms-grid-row: 1;
+            grid-column: 3;
+            -ms-grid-column: 3;
+          }
+
+          .TaskAssignee {
+            grid-row: 1;
+            -ms-grid-row: 1;
+            grid-column: 4;
+            -ms-grid-column: 4;
+          }
+
+          .TaskDue {
+            justify-content: flex-start;
+            align-items: center;
+
+            grid-row: 1;
+            -ms-grid-row: 1;
+            grid-column: 5;
+            -ms-grid-column: 5;
+          }
+        }
+
+        svg {
+          vertical-align: middle;
+          margin-right: 4px;
+        }
+        span,
+        select {
+          vertical-align: middle;
+        }
+
+        .TaskIcon {
+          color: $ms-color-gray120;
+          margin-right: 8px;
+        }
+        mgt-people {
+          color: var(--task-detail-color, black);
+          font-size: 16px;
+        }
+
+        mgt-person {
+          display: inline-block;
+        }
+        .Picker {
+          background-color: white;
+          box-shadow: 0 3px 7px rgba(0, 0, 0, 0.3);
+          -webkit-background-clip: padding-box;
+          -moz-background-clip: padding-box;
+          background-clip: padding-box;
+          width: 350px;
+          color: var(--task-detail-color, black);
+          margin: 8px;
+          mgt-people-picker {
+            --separator-margin: 0px 10px 0px 10px;
+          }
+        }
+
+        input,
+        select {
+          color: var(--task-detail-color, #767676);
+          font-size: 0.9em;
         }
       }
     }
+
     .TaskHeader {
       display: flex;
       justify-content: center;
@@ -232,22 +410,11 @@ mgt-tasks,
     }
 
     &.Complete {
-      background: var(--task-complete-background, #f6f6f6);
-      border-color: var(--task-complete-border, #e2e2e2);
-      .TaskHeader {
-        color: var(--task-complete-header-color, #959595);
-      }
-      .TaskDetails {
-        color: var(--task-complete-detail-color #b0b0b0);
-
-        .TaskIcon {
-          color: var(--task-compete-detail-icon-color, #959595);
-        }
-      }
+      background: var(--task-complete-background, $ms-color-gray30);
     }
 
     &.NewTask {
-      margin: var(--task-new-margin, var(--task-margin, 0 10px 10px 10px));
+      margin: var(--task-new-margin, var(--task-margin, 0 0 24px 0));
       display: flex;
       flex-direction: row;
       .SelfAssign {
@@ -278,33 +445,63 @@ mgt-tasks,
         margin: 0 0 0 12px;
 
         .TaskDetailsContainer {
+          display: flex;
+          flex-direction: column;
+          align-items: stretch;
           margin: 0;
 
           .TaskTitle {
-            max-width: none;
+            display: flex;
+
             input {
-              flex: 1 0 auto;
+              flex: 1;
               font-family: var(--default-font-family, 'Segoe UI');
-              margin: var(--task-new-input-margin, 16px 0 0 0);
-              padding: var(--task-new-input-padding, 7px);
-              font-size: var(--task-new-input-font-size, 1em);
+              margin: var(--task-new-input-margin, 0 24px 0 16px);
+              padding: var(--task-new-input-padding, 6px);
+              font-size: var(--task-new-input-font-size, 14px);
+              font-weight: 600;
               border: var(--task-new-border, none);
-              width: 100%;
+              border-bottom: 1px solid $ms-color-gray40;
+              outline: none;
+              border-radius: 0;
+            }
+
+            input:hover {
+              border-bottom: 1px solid $ms-color-communicationShade10;
             }
 
             input:active {
-              border: var(--task-new-input-active-border, none);
+              border-bottom: 1px solid $ms-color-communicationShade20;
+            }
+
+            input:focus {
+              border-bottom: 1px solid $ms-color-communicationPrimary;
             }
           }
 
-          hr {
-            border: var(--task-new-line-border, solid 1px #d8d8d8);
-            margin: 0;
-          }
-
           .TaskDetails {
-            flex: 1 0 auto;
+            display: flex;
+            justify-content: stretch;
+            align-items: center;
+            flex-wrap: wrap;
             margin: 14px 0 14px 4px;
+
+            .NewTaskGroup {
+              margin: 8px 16px;
+            }
+
+            .NewTaskBucket {
+              margin: 8px 16px;
+            }
+
+            .NewTaskDue {
+              margin: 8px 16px;
+            }
+
+            .NewTaskAssignee {
+              margin: 8px 16px;
+              min-width: 80px;
+            }
 
             .TaskPeople label {
               display: flex;
@@ -315,8 +512,25 @@ mgt-tasks,
             select,
             input {
               font-family: var(--default-font-family, 'Segoe UI');
+              font-size: 12px;
+              font-weight: 600;
               border: var(--task-new-select-border, none);
-              padding: 0 10px;
+              border-bottom: 1px solid $ms-color-gray40;
+              outline: none;
+              border-radius: 0;
+              padding: 4px;
+
+              &:hover {
+                border-bottom: 1px solid $ms-color-communicationShade10;
+              }
+
+              &:active {
+                border-bottom: 1px solid $ms-color-communicationShade20;
+              }
+
+              &:focus {
+                border-bottom: 1px solid $ms-color-communicationPrimary;
+              }
             }
           }
         }
@@ -325,8 +539,6 @@ mgt-tasks,
       .TaskAddButtonContainer {
         flex: 0 0 auto;
         display: flex;
-        align-content: center;
-        align-items: center;
 
         .TaskAdd,
         .TaskCancel {
@@ -338,17 +550,19 @@ mgt-tasks,
           align-items: center;
           display: flex;
           cursor: pointer;
-          color: white;
         }
 
         .TaskAdd {
-          background: var(--task-new-add-button-background, #0078d4);
+          color: white;
+          background: var(--task-new-add-button-background, $ms-color-communicationPrimary);
         }
 
         .TaskCancel {
           font-family: var(--default-font-family, 'Segoe UI');
-          color: var(--task-new-cancel-button-color, gray);
-          margin: 0px 20px 0px 32px;
+          font-size: 14px;
+          font-weight: 600;
+          color: var(--task-new-cancel-button-color, $ms-color-gray210);
+          margin: 0 12px 0 32px;
         }
 
         &.Disabled .TaskAdd {
@@ -361,51 +575,36 @@ mgt-tasks,
     .TaskCheckContainer {
       font-family: 'FabricMDL2Icons';
       display: inline-block;
-      width: 24px;
-      height: 24px;
-      text-align: center;
       border-radius: 50%;
-      flex: 0 0 auto;
       color: white;
       cursor: pointer;
       display: flex;
-      align-items: center;
-      align-content: center;
-      justify-items: center;
-      justify-content: center;
-      margin: 20px 10px 20px 20px;
+      align-items: flex-start;
+      margin: 21px 10px 20px 20px;
 
       user-select: none;
       -moz-user-select: none;
       -ms-user-select: none;
       &.Complete {
         .TaskCheck {
-          background: #00b294;
-          border-color: #00b294;
-          display: flex;
-          align-items: center;
-          align-content: center;
-          justify-items: center;
-          justify-content: center;
+          background-color: $ms-color-sharedGreenCyan10;
+          border: solid 1px white;
         }
       }
     }
 
     .TaskCheck {
       font-family: 'FabricMDL2Icons';
+      font-size: 12px;
       display: inline-block;
-      width: 22px;
-      height: 22px;
-      text-align: center;
+      width: 18px;
+      height: 18px;
       border-radius: 50%;
-      border: solid 1px #666666;
-      flex: 0 0 auto;
+      border: solid 1px $ms-color-gray120;
       color: white;
       display: flex;
-      align-items: center;
-      align-content: center;
-      justify-items: center;
       justify-content: center;
+      align-items: center;
 
       user-select: none;
       -moz-user-select: none;
@@ -419,6 +618,9 @@ mgt-tasks,
     &.LoadingTask {
       .TaskCheckContainer {
         cursor: default;
+      }
+      .TaskDetails {
+        display: flex;
       }
       .TaskCheck {
         background: #f2f2f2;
@@ -437,10 +639,12 @@ mgt-tasks,
       }
       .TaskTitle {
         background: #f2f2f2;
+        max-width: 400px;
         height: 20px;
+        margin-right: 20px !important;
       }
       .TaskDetail {
-        margin-right: 8px;
+        margin-right: 12px;
         display: flex;
         flex-direction: row;
         align-items: center;
@@ -457,9 +661,7 @@ mgt-tasks,
       user-select: none;
       -moz-user-select: none;
       -ms-user-select: none;
-      position: absolute;
-      top: 0;
-      right: 0;
+      margin: 16px 8px 0 0;
     }
   }
   .LoadingHeader {
