--- a/src/components/mgt-teams-channel-picker/mgt-teams-channel-picker.scss
+++ b/src/components/mgt-teams-channel-picker/mgt-teams-channel-picker.scss
@@ -16,32 +16,32 @@ $initials-color: var(--initials-color, white);
 $initials-background-color: var(--initials-background-color, #{$ms-color-magenta});
 $accent-color: var(--accent-color, #0078d4);
 
-$people-list-background-color: var(--people-list-background-color, white);
+$team-list-background-color: var(--team-list-background-color, white);
 
 :host {
   border-radius: 2px;
 }
 :host .root,
-mgt-people-picker .root {
+mgt-teams-channel-picker .root {
   display: block;
 }
 
-:host .people-picker,
-mgt-people-picker .people-picker {
+:host .teams-channel-picker,
+mgt-teams-channel-picker .teams-channel-picker {
   position: relative;
   margin: 7px 0 0 0;
   background-color: white;
   padding-bottom: 8px;
 }
 
-:host .people-list,
-mgt-people-picker .people-list {
+:host .team-list,
+mgt-teams-channel-picker .team-list {
   position: absolute;
   margin: 7px 0px 0px 0px;
   padding: 0;
   box-shadow: 0px 1.3289px 2.65781px rgba(180, 180, 180, 0.182), 0px 1.3289px 2.65781px rgba(68, 68, 68, 0.3);
   border-radius: 2px;
-  background-color: $people-list-background-color;
+  background-color: $team-list-background-color;
   z-index: 1; /* Sit on top */
   width: 100%;
   text-align: left;
@@ -54,8 +54,8 @@ mgt-people-picker .people-list {
     cursor: pointer;
   }
 }
-:host .people-list-separator,
-mgt-people-picker .people-list-separator {
+:host .teams-list-separator,
+mgt-teams-channel-picker .teams-list-separator {
   height: 2px;
   background: $accent-color;
   margin-top: 5px;
@@ -63,7 +63,7 @@ mgt-people-picker .people-list-separator {
 }
 
 :host .people-chosen-input,
-mgt-people-picker .people-chosen-input {
+mgt-teams-channel-picker .people-chosen-input {
   position: relative;
   border: none;
   line-height: normal;
@@ -79,7 +79,7 @@ mgt-people-picker .people-chosen-input {
 }
 
 :host .people-chosen-list,
-mgt-people-picker .people-chosen-list {
+mgt-teams-channel-picker .people-chosen-list {
   display: flex;
   flex-wrap: wrap;
   vertical-align: middle;
@@ -91,7 +91,7 @@ mgt-people-picker .people-chosen-list {
   font-weight: normal;
 }
 .CloseIcon,
-mgt-people-picker .CloseIcon {
+mgt-teams-channel-picker .CloseIcon {
   line-height: normal;
   font-family: 'FabricMDL2Icons';
   padding-right: 8px;
@@ -100,13 +100,13 @@ mgt-people-picker .CloseIcon {
   cursor: pointer;
 }
 :host .SearchIcon,
-mgt-people-picker .SearchIcon {
+mgt-teams-channel-picker .SearchIcon {
   font-family: 'FabricMDL2Icons';
   color: $accent-color;
 }
 
 :host .people-person,
-mgt-people-picker .people-person {
+mgt-teams-channel-picker .people-person {
   display: flex;
   margin: 4px 5px 0 0;
   align-items: center;
@@ -118,8 +118,8 @@ mgt-people-picker .people-person {
   text-overflow: ellipsis;
 }
 
-:host .list-person,
-mgt-people-picker .list-person {
+:host .list-team,
+mgt-teams-channel-picker .list-team {
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
@@ -138,13 +138,13 @@ mgt-people-picker .list-person {
   }
 }
 
-:host .people-person-list-fill,
-mgt-people-picker .people-person-list-fill {
+:host .teams-channel-list-fill,
+mgt-teams-channel-picker .teams-channel-list-fill {
   background-color: #f1f1f1;
 }
 
 :host .channel-display,
-mgt-people-picker .channel-display {
+mgt-teams-channel-picker .channel-display {
   padding-left: 10px;
   &:hover {
     background-color: #f1f1f1dd;
@@ -156,18 +156,18 @@ mgt-people-picker .channel-display {
   }
 }
 :host .render-channels,
-mgt-people-picker .render-channels {
+mgt-teams-channel-picker .render-channels {
   padding-left: 24px;
   padding-right: 20px;
 }
 
 :host .hide-channels,
-mgt-people-picker .hide-channels {
+mgt-teams-channel-picker .hide-channels {
   display: none;
 }
 
 :host .people-person-text,
-mgt-people-picker .people-person-text {
+mgt-teams-channel-picker .people-person-text {
   font-size: 14px;
   font-weight: normal;
   margin: 0;
@@ -175,19 +175,19 @@ mgt-people-picker .people-person-text {
 }
 
 :host .input-search,
-mgt-people-picker .input-search {
+mgt-teams-channel-picker .input-search {
   margin: 7px 2px 0px 3px;
 }
 :host .input-search-start,
-mgt-people-picker .input-search-start {
+mgt-teams-channel-picker .input-search-start {
   margin: 7px 0px 0px 0px;
   line-height: normal;
   margin-inline-start: 0px;
   margin-inline-end: 0px;
 }
 
-:host .people-picker-input,
-mgt-people-picker .people-picker-input {
+:host .teams-channel-picker-input,
+mgt-teams-channel-picker .teams-channel-picker-input {
   display: flex;
   order: 2;
   background-color: white;
@@ -198,25 +198,25 @@ mgt-people-picker .people-picker-input {
 }
 
 :host .duplicate-person,
-mgt-people-picker .duplicate-person {
+mgt-teams-channel-picker .duplicate-person {
   text-decoration: none;
   border-bottom: 1px solid red;
 }
 
 :host .remove-person-button,
-mgt-people-picker .remove-person-button {
+mgt-teams-channel-picker .remove-person-button {
   background: #767676;
   transform: matrix(-0.71, -0.71, 0.71, -0.71, 0, 0);
 }
 
 :host .remove-person-button-secondary,
-mgt-people-picker .remove-person-button-secondary {
+mgt-teams-channel-picker .remove-person-button-secondary {
   background: #767676;
   transform: matrix(0.71, -0.71, 0.71, 0.71, 0, 0);
 }
 
 :host .person-display-name,
-mgt-people-picker .person-display-name {
+mgt-teams-channel-picker .person-display-name {
   max-width: 100px;
   white-space: nowrap;
   overflow: hidden;
@@ -242,8 +242,8 @@ mgt-person {
 
 :host .search-error-text,
 :host .loading-text,
-mgt-people-picker .search-error-text,
-mgt-people-picker .loading-text {
+mgt-teams-channel-picker .search-error-text,
+mgt-teams-channel-picker .loading-text {
   font-family: Segoe UI;
   font-style: normal;
   font-weight: 600;
@@ -254,14 +254,14 @@ mgt-people-picker .loading-text {
 }
 
 :host .SearchErrorIcon,
-mgt-people-picker .SearchErrorIcon {
+mgt-teams-channel-picker .SearchErrorIcon {
   display: inline-block;
   font-family: 'FabricMDL2Icons';
   color: #cf0000;
 }
 
 :host .message-parent,
-mgt-people-picker .message-parent {
+mgt-teams-channel-picker .message-parent {
   margin-top: 30px;
   margin-bottom: 30px;
   display: flex;
@@ -271,11 +271,11 @@ mgt-people-picker .message-parent {
 }
 
 :host .highlight-search-text,
-mgt-people-picker .highlight-search-text {
+mgt-teams-channel-picker .highlight-search-text {
   font-weight: bold;
 }
 :host .people-person-job-title,
-mgt-people-picker .people-person-job-title {
+mgt-teams-channel-picker .people-person-job-title {
   flex: 100%;
   order: 3;
   font-weight: normal;
@@ -283,7 +283,7 @@ mgt-people-picker .people-person-job-title {
   text-transform: uppercase;
 }
 :host .people-person-text-area,
-mgt-people-picker .people-person-text-area {
+mgt-teams-channel-picker .people-person-text-area {
   margin-left: 13px;
   flex: 1 1 0;
   max-height: 40px;
