svg issues on teamlist

--- a/src/components/mgt-teams-channel-picker/mgt-teams-channel-picker.scss
+++ b/src/components/mgt-teams-channel-picker/mgt-teams-channel-picker.scss
@@ -52,6 +52,10 @@ mgt-teams-channel-picker .team-list {
 
   li {
     cursor: pointer;
+    .arrow {
+      margin-right: 10px;
+      margin-bottom: 1px;
+    }
   }
 }
 :host .teams-list-separator,
